Mejoras generales en el formulario de mantenimiento

--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -4,7 +4,7 @@
             <ion-list>
                 <label class="item item-input">
                     <span class="input-label">Correo electrónico</span>
-                    <input type="text" ng-model="login.emailAddress" required>
+                    <input type="email" ng-model="login.emailAddress" required>
                 </label>
                 <label class="item item-input">
                     <span class="input-label">Contraseña</span>
