--- a/www/css/style.css
+++ b/www/css/style.css
@@ -37,6 +37,7 @@ form.show-errors .ng-invalid {
     display: block;
     margin-right: auto;
     margin-left: auto;
+    border: 1px solid gray;
 }
 
 /*
