--- a/www/templates/records.html
+++ b/www/templates/records.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Historial">
+<ion-view view-title="Historial" can-swipe-back="false" hide-back-button="true">
     <ion-content padding="true" class="has-header">
         <form name="recordsForm" ng-class="{'show-errors': showErrors}">
             <div class="row responsive-sm">
