--- a/www/templates/tools.html
+++ b/www/templates/tools.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Herramientas">
+<ion-view view-title="Herramientas" can-swipe-back="false" hide-back-button="true">
     <ion-content class="has-header" padding="true">
     	<button class="button button-positive button-block" ng-click="sigOut()" ng-disabled="runningProcess">Cerrar sesión</button>
     	<div style="height: 0;" class="spacer"></div>
