--- a/www/templates/new.html
+++ b/www/templates/new.html
@@ -38,11 +38,11 @@
                     </div>
                     <ion-toggle toggle-class="toggle-positive" ng-model="maintenance.preventive" ng-change="maintenance.preventive = true">Preventivo</ion-toggle>
                     <ion-toggle toggle-class="toggle-positive" ng-model="maintenance.corrective" ng-change="maintenance.corrective = readOnlyMode ? !maintenance.corrective : maintenance.corrective; getMaintenanceInfo();">Correctivo</ion-toggle>
+                    <div class="button-bar" ng-hide="(readOnlyMode || preloadData || maintenance.id || !(maintenance.customerId))">
+                        <button type="button" class="button button-block  icon ion-battery-charging" ng-click="newBatteryMaintenance()"> Mantenimiento de batería</button>
+                        <button type="button" class="button button-block  icon ion-flash" ng-click="newChargerMaintenance()"> Mantenimiento de cargador</button>
+                    </div>
                 </form>
-                <div class="button-bar" ng-hide="(readOnlyMode || preloadData || maintenance.id || !(maintenance.customerId))">
-                    <button type="button" class="button button-block  icon ion-battery-charging" ng-click="newBatteryMaintenance()"> Mantenimiento de batería</button>
-                    <button type="button" class="button button-block  icon ion-flash" ng-click="newChargerMaintenance()"> Mantenimiento de cargador</button>
-                </div>
                 <div style="height: 300px;" class="spacer"></div>
             </ion-content>
         </ion-tab>
@@ -399,11 +399,12 @@
                     <div>
                     <canvas id="signatureCanvas" width="700" height="350"></canvas>
                     </div>
+                    <p style="color: red;font-size: 16px; font-weight: bold;padding-top: 10px;" ng-hide="readOnlyMode">Antes de guardar debe estar completamente seguro de que no le falta nada por digitar...</p>
+                    <div class="button-bar">
+                        <button type="button" class="button button-energized" ng-click="clearCanvas()" ng-disabled="runningProcess || readOnlyMode">Repetir firma</button>
+                        <button type="button" class="button button-balanced" ng-click="saveMaintenance()" ng-disabled="(runningProcess || readOnlyMode)">Guarda</button>
+                    </div>
                 </form>
-                <div class="button-bar">
-                    <button type="button" class="button button-energized" ng-click="clearCanvas()" ng-disabled="runningProcess || readOnlyMode">Repetir firma</button>
-                    <button type="button" class="button button-balanced" ng-click="saveMaintenance()" ng-disabled="(runningProcess || readOnlyMode)">Guarda cambios</button>
-                </div>
                 <div style="height: 300px;" class="spacer"></div>
             </ion-content>
         </ion-tab>
