--- a/www/templates/customer.html
+++ b/www/templates/customer.html
@@ -16,7 +16,7 @@
                     <div class="item item-input-inset">
                         <label class="item-input-wrapper with-title">
                             <span class="input-label">Identidad</span>
-                            <input type="text" required ng-model="customer.identity">
+                            <input type="text" required ng-model="customer.identity" ng-model-options="{ updateOn: 'blur' }">
                         </label>
                     </div>
                 </div>
@@ -26,7 +26,7 @@
                     <div class="item item-input-inset">
                         <label class="item-input-wrapper with-title">
                             <span class="input-label">Nombre</span>
-                            <input type="text" required ng-model="customer.name">
+                            <input type="text" required ng-model="customer.name" ng-model-options="{ updateOn: 'blur' }">
                         </label>
                     </div>
                 </div>
@@ -34,7 +34,7 @@
                     <div class="item item-input-inset">
                         <label class="item-input-wrapper with-title">
                             <span class="input-label">Nombre corto</span>
-                            <input type="text" ng-model="customer.shortName">
+                            <input type="text" ng-model="customer.shortName" ng-model-options="{ updateOn: 'blur' }">
                         </label>
                     </div>
                 </div>
@@ -44,7 +44,7 @@
                     <div class="item item-input-inset">
                         <label class="item-input-wrapper with-title">
                             <span class="input-label">País</span>
-                            <input type="text" required ng-model="customer.countryName" placeholder="Digite aquí el nombre del país, si este aún no existe" ng-change="customer.countryId = null; resetState();">
+                            <input type="text" required ng-model="customer.countryName" ng-model-options="{ updateOn: 'blur' }" placeholder="Digite aquí el nombre del país, si este aún no existe" ng-change="customer.countryId = null; resetState();">
                         </label>
                         <button type="button" tabindex="-1" class="button button-small button-pacm" ng-click="searchCountry()">
                             <i class="icon ion-search"></i>
@@ -57,7 +57,7 @@
                     <div class="item item-input-inset">
                         <label class="item-input-wrapper with-title">
                             <span class="input-label">Departamento</span>
-                            <input type="text" required ng-model="customer.stateName" placeholder="Digite aquí el nombre del departamento, si este aún no existe" ng-change="customer.stateId = null; resetCity();">
+                            <input type="text" required ng-model="customer.stateName" ng-model-options="{ updateOn: 'blur' }" placeholder="Digite aquí el nombre del departamento, si este aún no existe" ng-change="customer.stateId = null; resetCity();">
                         </label>
                         <button type="button" tabindex="-1" class="button button-small button-pacm" ng-click="searchState()">
                             <i class="icon ion-search"></i>
@@ -70,7 +70,7 @@
                     <div class="item item-input-inset">
                         <label class="item-input-wrapper">
                             <span class="input-label">Ciudad</span>
-                            <input type="text" required ng-model="customer.cityName" placeholder="Digite aquí el nombre de la ciudad / municipio, si este aún no existe" ng-change="customer.cityId = null;">
+                            <input type="text" required ng-model="customer.cityName" ng-model-options="{ updateOn: 'blur' }" placeholder="Digite aquí el nombre de la ciudad / municipio, si este aún no existe" ng-change="customer.cityId = null;">
                         </label>
                         <button type="button" tabindex="-1" class="button button-small button-pacm" ng-click="searchCity()">
                             <i class="icon ion-search"></i>
@@ -83,7 +83,7 @@
                     <div class="item item-input-inset">
                         <label class="item-input-wrapper with-title">
                             <span class="input-label">Dirección</span>
-                            <input type="text" required ng-model="customer.address">
+                            <input type="text" required ng-model="customer.address" ng-model-options="{ updateOn: 'blur' }">
                         </label>
                     </div>
                 </div>
@@ -91,7 +91,7 @@
                     <div class="item item-input-inset">
                         <label class="item-input-wrapper with-title">
                             <span class="input-label">Código postal</span>
-                            <input type="text" ng-model="customer.postalCode">
+                            <input type="text" ng-model="customer.postalCode" ng-model-options="{ updateOn: 'blur' }">
                         </label>
                     </div>
                 </div>
@@ -101,7 +101,7 @@
                     <div class="item item-input-inset">
                         <label class="item-input-wrapper with-title">
                             <span class="input-label">Teléfono</span>
-                            <input type="text" required ng-model="customer.phoneNumber">
+                            <input type="text" required ng-model="customer.phoneNumber" ng-model-options="{ updateOn: 'blur' }">
                         </label>
                     </div>
                 </div>
@@ -109,7 +109,7 @@
                     <div class="item item-input-inset">
                         <label class="item-input-wrapper with-title">
                             <span class="input-label">Web site</span>
-                            <input type="url" ng-model="customer.webSite">
+                            <input type="url" ng-model="customer.webSite" ng-model-options="{ updateOn: 'blur' }">
                         </label>
                     </div>
                 </div>
@@ -119,7 +119,7 @@
                     <div class="item item-input-inset">
                         <label class="item-input-wrapper with-title">
                             <span class="input-label">Nombre del contacto</span>
-                            <input type="text" ng-model="customer.contactName">
+                            <input type="text" ng-model="customer.contactName" ng-model-options="{ updateOn: 'blur' }">
                         </label>
                     </div>
                 </div>
@@ -127,7 +127,7 @@
                     <div class="item item-input-inset">
                         <label class="item-input-wrapper with-title">
                             <span class="input-label">Correo electrónico del contacto</span>
-                            <input type="email" ng-model="customer.contactEmailAddress">
+                            <input type="email" ng-model="customer.contactEmailAddress" ng-model-options="{ updateOn: 'blur' }">
                         </label>
                     </div>
                 </div>
