--- a/www/templates/searcher.html
+++ b/www/templates/searcher.html
@@ -9,7 +9,7 @@
         <form>
             <label class="item item-input">
                 <i class="icon ion-search placeholder-icon"></i>
-                <input type="search" placeholder="Filtro" ng-model="searcher.search">
+                <input type="search" placeholder="Filtro" ng-model="searcher.search" ng-model-options="{ updateOn: 'blur' }">
             </label>
         </form>
         <ion-list ng-if="['Country', 'State', 'City', 'Customer', 'ObjectTypeTrademark', 'ObjectTypeModel', 'MachineTrademark', 'MachineModel'].indexOf(searcher.type)>=0">
