--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,24 +1,10 @@
-<ion-side-menus enable-menu-with-back-views="true">
-    <ion-side-menu-content>
-        <ion-nav-bar class="bar-stable">
-            <ion-nav-back-button>
-            </ion-nav-back-button>
-            <ion-nav-buttons side="left">
-                <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
-                </button>
-            </ion-nav-buttons>
-        </ion-nav-bar>
-        <ion-nav-view name="menuContent"></ion-nav-view>
-    </ion-side-menu-content>
-    <ion-side-menu side="left">
+<ion-side-menus enable-menu-with-back-views="false">
+    <ion-side-menu side="left" is-enabled="userSession.isLogged">
         <ion-header-bar class="bar-stable">
-            <h1 class="title">Menu</h1>
+            <h1 class="title">Menú</h1>
         </ion-header-bar>
         <ion-content>
             <ion-list>
-                <ion-item menu-close href="#/app/login" ng-hide="userSession.isLogged">
-                    Iniciar sesión
-                </ion-item>
                 <ion-item menu-close href="#/app/new" ng-show="userSession.isLogged">
                     Nuevo
                 </ion-item>
@@ -31,4 +17,15 @@
             </ion-list>
         </ion-content>
     </ion-side-menu>
+    <ion-side-menu-content>
+        <ion-nav-bar class="bar-stable">
+            <ion-nav-buttons side="left">
+                <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
+                </button>
+            </ion-nav-buttons>
+            <ion-nav-back-button>
+            </ion-nav-back-button>
+        </ion-nav-bar>
+        <ion-nav-view name="menuContent"></ion-nav-view>
+    </ion-side-menu-content>
 </ion-side-menus>
