--- a/www/templates/notesPopup.html
+++ b/www/templates/notesPopup.html
@@ -5,7 +5,7 @@
             <button class="button button-clear" ng-click="notes.close()">Cerrar</button>
         </div>
     </ion-header-bar>
-    <ion-scroll>
+    <ion-content>
         <form>
             <div class="list">
                 <label class="item item-input">
@@ -13,5 +13,5 @@
                 </label>
             </div>
         </form>
-    </ion-scroll>
+    </ion-content>
 </ion-modal-view>
