--- a/www/templates/searcherPopup.html
+++ b/www/templates/searcherPopup.html
@@ -5,7 +5,7 @@
             <button class="button button-clear" ng-click="searcher.close()">Cerrar</button>
         </div>
     </ion-header-bar>
-    <ion-scroll>
+    <ion-content>
         <form>
             <div class="list">
                 <label class="item item-input">
@@ -51,5 +51,5 @@
                 ¡Opps! ¿Desea agregar cliente?
             </a>
         </ion-list>
-    </ion-scroll>
+    </ion-content>
 </ion-modal-view>
