--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,5 +1,5 @@
 <ion-side-menus enable-menu-with-back-views="false">
-    <ion-side-menu side="left" is-enabled="userSession.isLogged">
+    <ion-side-menu side="left">
         <ion-header-bar class="bar-stable">
             <h1 class="title">Menú</h1>
         </ion-header-bar>
