Habilitamos permisos para Android 4

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -11,7 +11,7 @@
                 <ion-item menu-close href="#/app/records" ng-show="userSession.isLogged">
                     Historial
                 </ion-item>
-                <ion-item menu-close href="#/app/tools" ng-show="userSession.isLogged">
+                <ion-item menu-close href="#/app/tools">
                     Herramientas
                 </ion-item>
             </ion-list>
