--- a/www/templates/notesPopup.html
+++ b/www/templates/notesPopup.html
@@ -7,9 +7,9 @@
     </ion-header-bar>
     <ion-content>
         <form>
-            <div class="list">
+            <div class="list list-inset">
                 <label class="item item-input">
-                    <textarea rows="5" ng-readonly="notes.readOnly" ng-model="notes.value" ng-model-options="{ debounce: 250 }" ng-change="notes.onChange(notes.value)"></textarea>
+                    <textarea rows="10" ng-readonly="notes.readOnly" ng-model="notes.value" ng-model-options="{ debounce: 250 }" ng-change="notes.onChange(notes.value)"></textarea>
                 </label>
             </div>
         </form>
